# judini-python

./: .gitignore  CHANGELOG.md  README.md  example.txt  pyproject.toml  setup.cfg  setup.py  streamlit.py  test.py  test_v2.ipynb
.github/workflows/: python_publish.yml
examples/: chat_completion.py  get_agent.py  update_agent.py
examples/fastapi/: fastapi.md  main.py
src/judini/: __init__.py  agent.py  codegpt.py  main.py  types.py  utils.py
src/judini.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/judini/codegpt/: agent.py  alias.py  chat.py  codegpt.py  document.py  test_agent.py  user.py
tests/: test_agent.py  test_response.py
