[metadata]
name = judini
version = 0.1.11
author = Daniel Avila
author_email = daniel@judini.ai
description = CodeGPT python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JudiniLabs/judini-python.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.31.0
    python-dotenv>=1.0.0
    pydantic>=2.5.2

[options.packages.find]
where = src

[project.urls]
"Homepage" = "https://judini.ai"
"Bug Tracker" = "https://github.com/JudiniLabs/judini-python/issues"
